Trying to apply values

--- a/HardCoreEnemies/locale/en/HardcoreEnemies.cfg
+++ b/HardCoreEnemies/locale/en/HardcoreEnemies.cfg
@@ -1,5 +1,5 @@
 [setting-name]
-DamageMultiplierSetting=Biter Damage Multiplier
+DamageMultiplier=Biter Damage Multiplier
 
 [setting-description]
-DamageMultiplierSetting=Change how much the resistances are multiplied, higher value = harder game
+DamageMultiplier=Change how much the resistances are multiplied, higher value = harder game
