--- a/HardCoreEnemies/locale/en/HardcoreEnemies.cfg
+++ b/HardCoreEnemies/locale/en/HardcoreEnemies.cfg
@@ -1,5 +1,5 @@
-[setting-name]
+[mod-setting-name]
 DamageMultiplier=Biter Damage Multiplier
 
-[setting-description]
+[mod-setting-description]
 DamageMultiplier=Change how much the resistances are multiplied, higher value = harder game
