modifying resistance decreases

--- a/HardCoreEnemies/locale/en/HardcoreEnemies.cfg
+++ b/HardCoreEnemies/locale/en/HardcoreEnemies.cfg
@@ -1,5 +1,7 @@
 [setting-name]
 DamageMultiplierSetting=Biter Damage Multiplier
+ResistanceMultiplierSetting=Building Resistance Multiplier
 
 [setting-description]
-DamageMultiplierSetting=Change how much the resistances are multiplied, higher value = harder game
+DamageMultiplierSetting=Change how much damage the biters do, higher value = harder game
+ResistanceMultiplierSetting=Change how much damage buildings can absord, higher value = easier game
