Full implementaion of the damge Function.

--- a/HardCoreEnemies/locale/en/HardcoreEnemies.cfg
+++ b/HardCoreEnemies/locale/en/HardcoreEnemies.cfg
@@ -1,7 +1,7 @@
-[setting-name]
+[mod-setting-name]
 DamageMultiplier=Biter Damage Multiplier
 ResistanceMultiplier=Building Resistance Multiplier
 
-[setting-description]
+[mod-setting-description]
 DamageMultiplier=Change how much damage the biters do, higher value = harder game
 ResistanceMultiplier=Change how much damage buildings can absord, higher value = easier game
