settings 4 Logging + Polishing.

--- a/HardCoreEnemies/locale/en/HardcoreEnemies.cfg
+++ b/HardCoreEnemies/locale/en/HardcoreEnemies.cfg
@@ -1,7 +1,7 @@
 [mod-setting-name]
-DamageMultiplier=Biter Damage Multiplier
-ResistanceMultiplier=Building Resistance Multiplier
+DamageMultiplier=Damage Multiplier
+ResistanceMultiplier=Building Resistance Multiplier (WIP)
 
 [mod-setting-description]
-DamageMultiplier=Change how much damage the biters do, higher value = harder game
+DamageMultiplier=Change how much damage the enemy entity do, higher value = harder game
 ResistanceMultiplier=Change how much damage buildings can absord, higher value = easier game
