The final fixed 4 release

--- a/HardCoreEnemies/locale/en/HardcoreEnemies.cfg
+++ b/HardCoreEnemies/locale/en/HardcoreEnemies.cfg
@@ -1,7 +1,9 @@
 [mod-setting-name]
-DamageMultiplier=Damage Multiplier
-ResistanceMultiplier=Building Resistance Multiplier (WIP)
+DamageMultiplier=[color=yellow]Damage Multiplier[/color]
+ResistanceMultiplier=[color=green]Building Resistance Multiplier[/color]
+CombatResistanceMultiplier=[color=green]Combat buildings Resistance Multiplier[/color]
 
 [mod-setting-description]
-DamageMultiplier=Change how much damage the enemy entity do, higher value = harder game
-ResistanceMultiplier=Change how much damage buildings can absord, higher value = easier game
+DamageMultiplier=Change how much damage the enemy entity do. With exeption to destroyers.\nHigher value = Harder game.\n\nSetting this to 1 will make damage value retrun to vanilla.
+ResistanceMultiplier=Change how much damage buildings can absord.\nHigher value = Easier game.
+CombatResistanceMultiplier=Change how much resistances combat buildings get\nHigher value = Easier game.
